// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Pager ui first: Component: Pager => first 1`] = `
<div
  className="pager"
>
  <Button
    className="me-1"
    disabled={true}
    icon="arrow_back"
    onClick={[Function]}
    outline={true}
  >
    Previous
  </Button>
  <Button
    className="pager-next"
    disabled={false}
    icon="arrow_forward"
    iconPosition="right"
    onClick={[Function]}
    outline={true}
  >
    Next
  </Button>
</div>
`;

exports[`Component: Pager ui last: Component: Pager => last 1`] = `
<div
  className="pager"
>
  <Button
    className="me-1"
    disabled={false}
    icon="arrow_back"
    onClick={[Function]}
    outline={true}
  >
    Previous
  </Button>
  <Button
    className="pager-next"
    disabled={true}
    icon="arrow_forward"
    iconPosition="right"
    onClick={[Function]}
    outline={true}
  >
    Next
  </Button>
</div>
`;

exports[`Component: Pager ui normal: Component: Pager => normal 1`] = `
<div
  className="pager"
>
  <Button
    className="me-1"
    disabled={false}
    icon="arrow_back"
    onClick={[Function]}
    outline={true}
  >
    Previous
  </Button>
  <Button
    className="pager-next"
    disabled={false}
    icon="arrow_forward"
    iconPosition="right"
    onClick={[Function]}
    outline={true}
  >
    Next
  </Button>
</div>
`;
